# vernadskiy_boltalka

./: .gitignore  README.MD  build_graph.py  chat_graph.py  config.py  graph_store.py  main.py  pyproject.toml  requirements.txt  run.sh  setup.sh
data/: vernadsky_graph.json
qdrant_data/: meta.json
tests/: test_config.py  test_paths.py
vernadskiy_boltalka/: __init__.py  __main__.py  build_graph.py  chat_graph.py  cli.py  config.py  embeddings_core.py  graph_store.py  llm_utils.py  paths.py  rag_retriever.py
vernadskiy_boltalka.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
vernadskiy_boltalka/rag_pipeline/: __init__.py  embeddings.py  llm_chunker.py  preprocessing_data.py
vernadskiy_data/: booksprime.ru__nauchnaya-mysl-kak-planetnoe-yavlenie.epub  Глава I.docx  Глава II.docx  Глава III.docx  Глава IV.docx  Глава IX.docx  Глава V.docx  Глава VI.docx  Глава VII.docx  Глава VIII.docx
