[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "vernadskiy-boltalka"
version = "0.1.0"
description = "Чат-бот в стиле Вернадского с графом знаний и Qdrant"
readme = "README.MD"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
    "langchain-core>=0.3.0",
    "qdrant-client>=1.7.0",
    "sentence-transformers>=2.2.0",
    "pypdf>=3.0.0",
    "python-docx>=1.0.0",
    "ebooklib>=0.18",
    "beautifulsoup4>=4.12.0",
    "unstructured>=0.16.0",
    "httpx>=0.27.0",
    "openai>=1.0.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
vernadskiy-chat = "vernadskiy_boltalka.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["vernadskiy_boltalka*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
